--- a/_quarto.yml
+++ b/_quarto.yml
@@ -7,8 +7,6 @@ website:
   sidebar:
     style: docked
     search: true
-    background: "#861F41" # Chicago Maroon
-    foreground: "#FFFFFF"
     pinned: true
     contents:
       - section: "Schedule"
@@ -25,9 +23,12 @@ website:
 
 format:
   html:
-    theme: default
-    css: styles.css
+    theme:
+      light: [default, styles.scss]
+      dark: [darkly, styles.scss]
+    mainfont: "Nunito Sans"
     toc: true
+    code-copy: true
 
 
 
