--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,8 @@ website:
             text: 1. Introduction
           - href: meetings/02-dh-and-ph.qmd
             text: 2. Digital History and Public History
+      - href: resources.qmd
+        text: Resources
 
   page-footer:
     right: "This page is built with [Quarto](https://quarto.org/)."
