--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,6 +15,33 @@ website:
             text: 1. Introduction
           - href: meetings/02-dh-and-ph.qmd
             text: 2. Digital History and Public History
+          - href: meetings/03-organization.qmd
+            text: 3. Organizing resources
+          - href: meetings/04-markdown.qmd
+            text: 4. Plain text and markdown
+          - href: meetings/05-data.qmd
+            text: 5. Data and an intro to the command line
+          - href: meetings/06-rstats.qmd
+            text: 6. Intro to R and RStudio
+          - href: meetings/07-wrangle.qmd
+            text: 7. Data wrangling
+          - href: meetings/08-ggplot2.qmd
+            text: 8. Visualization with ggplot2
+          - href: meetings/09-git.qmd
+            text: 9. Version control with Git and GitHub
+          - href: meetings/10-quarto.qmd
+            text: 10. Making documents and websites with Quarto
+          - href: meetings/11-text.qmd
+            text: 11. Text analysis
+          - href: meetings/12-network.qmd
+            text: 12. Network analysis
+          - href: meetings/13-spatial.qmd
+            text: 13. Spatial analysis
+          - href: meetings/14-design.qmd
+            text: 14. Web design and visualization
+          - href: meetings/15-conclusion.qmd
+            text: 15. Conclusion
+
       - href: resources.qmd
         text: Resources
       - href: faq.qmd
