--- a/_quarto.yml
+++ b/_quarto.yml
@@ -46,6 +46,8 @@ website:
         text: Resources
       - href: faq.qmd
         text: FAQ
+      - href: computing.qmd
+        text: Computing
 
   page-footer:
     right: "This page is built with [Quarto](https://quarto.org/)."
